test/parser/assignment/invalid_pattern_name_error.exp
Error: Invalid left hand side of assignment
test/parser/assignment/invalid_pattern_name_error.myte:4:3-6
 4 |    A().B.C (A) = 1;
   |    ^^^